# advent-of-code

./: Cargo.toml
aoc/: Cargo.toml
aoc/src/: main.rs  utils.rs
aoc/src/year21/: day4.rs
src/: main.rs  utils.rs  year22.rs
src/year15/: day1.rs  day2.rs  day3.rs  day9.rs
src/year21/: day1.rs  day10.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
src/year22/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/year23/: day1.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day9.rs
src/year24/: day1.rs  day2.rs  day3.rs
