[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
clap = { version = "4.0", features = ["derive"] }
petgraph = "0.6.2"
itertools = "0.12.0"
pathfinding = "4.11.0"
regex = "1.11.1"
